--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "url": "https://cvgellhorn@github.com/cvgellhorn/webpack-boilerplate.git"
   },
   "dependencies": {
-    "lodash": "^4.17.4"
+    "lodash": "^4.17.4",
+    "pixi.js": "^4.6.2"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
@@ -24,6 +25,12 @@
     "cross-env": "^5.1.3",
     "css-loader": "^0.28.7",
     "ejs-loader": "^0.3.0",
+    "eslint": "^4.14.0",
+    "eslint-config-standard": "^11.0.0-beta.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-node": "^5.2.1",
+    "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-standard": "^3.0.1",
     "file-loader": "^1.1.6",
     "html-webpack-plugin": "^2.30.1",
     "node-sass": "^4.7.2",
