--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "url": "https://cvgellhorn@github.com/cvgellhorn/webpack-boilerplate.git"
   },
   "dependencies": {
+    "animejs": "^2.2.0",
     "lodash": "^4.17.4",
     "pixi.js": "^4.6.2"
   },
